--- a/bwmcnew/Site.Master
+++ b/bwmcnew/Site.Master
@@ -42,11 +42,12 @@
                     <ul id="main-nav" class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item active"><a class="nav-link" aria-current="page" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Careers</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/management-accounting">Management</a></li>
+                        <%--<li class="nav-item"><a class="nav-link" href="">Careers</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link btn-contact" href="">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Services</a></li>--%>
+                        <li class="nav-item"><a class="nav-link" href="/news">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link btn-contact" href="/contact">Contact</a></li>
                         <!-- <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Dropdown
@@ -83,8 +84,8 @@
                     <div class="col-md-2">
                         <h6>Quick Links</h6>
                         <ul class="foo-menu">
-                            <li><a href="/about">Blog Details</a></li>                            
-                            <li><a href="/contact-us">Case Details</a></li>
+                            <li><a href="#">Blog Details</a></li>                            
+                            <li><a href="#">Case Details</a></li>
                             <li><a href="#">Pricing Plans</a></li>
                             <li><a href="#">Team Details </a></li>                      
                         </ul>
@@ -94,7 +95,7 @@
                             <li><a href="#">Service Details</a></li>
                             <li><a href="/about">About Us</a></li>
 <%--                            <li><a href="#">Contact Us</a></li>--%>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="/contact">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-md-5">
