--- a/bwmcnew/Site.Mobile.Master
+++ b/bwmcnew/Site.Mobile.Master
@@ -41,22 +41,25 @@
                     <ul id="main-nav" class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item active"><a class="nav-link" aria-current="page" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Careers</a></li>
+                       <%-- <li class="nav-item"><a class="nav-link" href="/management-accounting">Management</a></li>--%>
+                        <%--<li class="nav-item"><a class="nav-link" href="">Careers</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link btn-contact" href="">Contact</a></li>
-                        <!-- <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
+                        <li class="nav-item"><a class="nav-link" href="">Services</a></li>--%>
+                       
+                      
+                         <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="javascript:;" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Services
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                         <li><a class="dropdown-item" href="/internal-audit">Internal Audit</a></li>
+                        <li><a class="dropdown-item" href="/accounting-bookkeeping">Accounting & Bookkeeping</a></li>
+                        <li><a class="dropdown-item" href="/audit-assurance">Audit & Assurance</a></li>
                       </ul>
-                    </li> -->
+                    </li> 
+                    <li class="nav-item"><a class="nav-link" href="/news">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link btn-contact" href="/contact">Contact</a></li>
+                
                     </ul>
                 </div>
             </div>
