--- a/bwmcnew/lp.Master
+++ b/bwmcnew/lp.Master
@@ -9,17 +9,17 @@
     <link rel="icon" type="image/x-icon" size="16x16" href="favicon.png">         
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link rel="icon" type="image/x-icon" size="16x16" href="/assets/images/favicon.png">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/lp-style.css">
-    <link rel="stylesheet" href="assets/css/slick-theme.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/intlTelInput.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/x-icon" size="16x16" href="/assets/images/favicon.png"/>
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/assets/css/style.css"/>
+    <link rel="stylesheet" href="/assets/css/lp-style.css"/>
+    <link rel="stylesheet" href="/assets/css/slick-theme.css"/>
+    <link rel="stylesheet" href="/assets/css/slick.css"/>
+    <link rel="stylesheet" href="/assets/css/intlTelInput.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <asp:ContentPlaceHolder ID="headLP" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -103,11 +103,11 @@
     </footer>
     </div>
 
-    <script src="assets/js/vendors-min.js"></script>
-        <script src="assets/js/form-functions.js"></script>
-        <script src="assets/js/intlTelInput-17.0.8.js"></script>
+    <script src="/assets/js/vendors-min.js"></script>
+        <script src="/assets/js/form-functions.js"></script>
+        <script src="/assets/js/intlTelInput-17.0.8.js"></script>
        
-        <script src="assets/js/custom.js"></script>
+        <script src="/assets/js/custom.js"></script>
 
 
 </body>
