--- a/bwmcnew/assets/css/style.css
+++ b/bwmcnew/assets/css/style.css
@@ -210,8 +210,11 @@ h1 {
     border-radius: 10px;
     margin-left: 10px;
 }
-
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+.btn-contact:hover {
+    background-color: var(--primaryy-color);
+    color: #fff!important;
+}
+    .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
     color: var(--primaryy-color);
 }
 
@@ -395,7 +398,6 @@ h1 {
     background: #fff;
     background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(50%, rgba(255, 255, 255, 0.8)), to(rgba(255, 255, 255, 0)));
     background: linear-gradient(to right, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 100%);
-    /*pointer-events: none;*/
     z-index: 3;
     opacity: 0;
     transform: skew(30deg);
@@ -1361,7 +1363,7 @@ h1 {
         }
 
         .inner-banner {
-            height: 380px;
+            height: 340px;
         }
 
         .inner-banner-content {
