--- a/bwmcnew/assets/css/style.css
+++ b/bwmcnew/assets/css/style.css
@@ -1022,6 +1022,7 @@ h1 {
 }
 .sp-postion{
     position:relative;
+    z-index:9;
 }
 .sp-postion::before {
    content: "";
@@ -1029,8 +1030,9 @@ h1 {
    height: 1px;
    position: absolute;
    top: 28px;
-   width: 59%;
+   width: 52%;
    right: 8%;
+   z-index:-1;
  }
 .slick-nav-btm {
     display: flex;
